--- a/Regression_tasks/Generating Hard Functions.ipynb
+++ b/Regression_tasks/Generating Hard Functions.ipynb
@@ -32,8 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The functions that we propose that satisfy all the required qualities described above. The function $f: [-1,1] \\rightarrow [-1,1]$ is defined to be $f(x)= 1-\\rho|x|$. Here the Lipschitz constant of this function is $\\rho$ and the growth rate of its oscillations is $\\rho$. This function has period 3, when $\\rho = 1.618$ (the golden ratio), the highest growth rate.\n",
-    "To find $t$, we simply do $t \\geq \\frac{l\\log(2u) + \\log(8)}{\\log(\\rho)}$. When $u$ and $l$ are large, $t$ is large. But how do we take large compositions? Python symbolic packages are not scalable to do the job. The easy work around is to actually treat it as a dynamical system. In the sense we randomly initialize $x_0$ in the interval $[-1,1]$ and then we implement the recursion $x_{t} = f(x_{t-1})= 1-\\rho|x_{t-1}|$. We take sufficiently large number of $x_0's$ and repeat this to generate our data set that consists of pairs $\\{x^{(i)},f^t(x^{(i)})\\}$, where $\\{x^{(1)},x^{(2)}\\ldots,x^{(n)}\\}$ are the $n$ different starting points randomly sampled in $[-1,1]$."
+    "The functions that we propose that satisfy all the required qualities described above. The function $f: [-1,1] \\rightarrow [-1,1]$ is defined to be $f(x)= \\rho|x|-1$. Here the Lipschitz constant of this function is $\\rho$ and the growth rate of its oscillations is $\\rho$. This function has period 3, when $\\rho = 1.618$ (the golden ratio), the highest growth rate.\n",
+    "To find $t$, we simply do $t \\geq \\frac{l\\log(2u) + \\log(8)}{\\log(\\rho)}$. When $u$ and $l$ are large, $t$ is large. But how do we take large compositions? Python symbolic packages are not scalable to do the job. The easy work around is to actually treat it as a dynamical system. In the sense we randomly initialize $x_0$ in the interval $[-1,1]$ and then we implement the recursion $x_{t} = f(x_{t-1})= \\rho|x_{t-1}|-1$. We take sufficiently large number of $x_0's$ and repeat this to generate our data set that consists of pairs $\\{x^{(i)},f^t(x^{(i)})\\}$, where $\\{x^{(1)},x^{(2)}\\ldots,x^{(n)}\\}$ are the $n$ different starting points randomly sampled in $[-1,1]$."
    ]
   },
   {
@@ -71,13 +71,13 @@
     "np.random.seed(42);\n",
     "n=10000 #number of starting points (essentially size of your data set).\n",
     "rho=1.618 #Corresponds to period 3. \n",
-    "t=40; #No of compositions of f, set according\n",
+    "t=40; #No of compositions of f, set according to your NN architecture.\n",
     "y_data=np.zeros((n,1)) #The values f^t(x)\n",
     "x_data=-1+2*np.random.uniform(size=(n,1)); #The starting data points.\n",
     "for i in range(n):\n",
     " x_temp=x_data[i,0]\n",
     " for j in range(t): \n",
-    "    x_temp=-(1-rho*np.abs(x_temp)); #f(x)=1-rho|x|\n",
+    "    x_temp=-(1-rho*np.abs(x_temp)); #f(x)=rho|x|-1\n",
     " y_data[i,0]=x_temp;\n",
     "#Use this training data on your favourite NN architecture and see how the training and generalization capabilities are."
    ]
@@ -97,7 +97,7 @@
    "source": [
     "p = 3 #Periodic point required for the function $f$. Lower the value, higher the growth rate! Always set p to be an odd integer > 1.\n",
     "func = lambda tau : tau**p - 2*tau**(p-2) - 1 \n",
-    "init_guess = 1.7 #This is set to a high value > 1.6 to allow to find solutions that are between sqrt(2) and 1.618.\n",
+    "init_guess = 1.7 #This is set to a high value > 1.6 to allow to find solutions that are between sqrt(2) and 1.618. The largest root is always > 1.\n",
     "tau_solution = fsolve(func, init_guess)\n",
     "rho=np.abs(tau_solution)\n",
     "#Before feeding into the data generation above, check if rho lies between sqrt(2) and 1.618."
